[package]
name = "mnc"
version = "0.9.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
crossbeam-channel = "0.5"
ctrlc = "3.4"
env_logger = "0.11"
log = "0.4"
nix = { version = "0.28", features = ["socket", "net", "uio"] }
regex = "1"
socket2 = "0.5"
thiserror = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[lints.clippy]
result_large_err = "allow"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
indexing_slicing = "deny"
unreachable = "deny"
undocumented_unsafe_blocks = "deny"
unwrap_in_result = "deny"

[lints.clippy.all]
level = "deny"
priority = -1
